Update RateAggregatorTests.java